<resources>
    <string name="app_name">ONP-calculator</string>
    <string name="ac">AC</string>
    <string name="drop">DROP</string>
    <string name="shift">SHIFT</string>
    <string name="clear">CLEAR</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="power">^</string>
    <string name="root">√</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="division">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="_0">0</string>
    <string name="sign">+/-</string>
    <string name="dot">.</string>
    <string name="enter">Enter</string>
    <string name="displayText">%1$s%2$s</string>
    <string name="bgColor">bgColor</string>
    <string name="decimalPoints">decimalPoints</string>
    <string name="entryDisplay">-</string>
    <string name="entryInputField">0</string>
    <string name="decimal_points">decimal points</string>
</resources>