<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403D3D"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/displayTable"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:stretchColumns="*"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/buttonsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/displayRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/display4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="end|center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/entryDisplay"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:id="@+id/displayRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/display3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="end|center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/entryDisplay"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:id="@+id/displayRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/display2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="end|center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/entryDisplay"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:id="@+id/DisplayRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/display1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="end|center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/entryInputField"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="0" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/buttonsTable"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:stretchColumns="*"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/ACButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:text="@string/ac"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dropButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/drop"
                android:textSize="16sp" />

            <Button
                android:id="@+id/shiftButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/shift"
                android:textSize="16sp" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/clear"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/powerButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/power"
                android:textSize="20sp" />

            <Button
                android:id="@+id/rootButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/root"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiplicateButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/x"
                android:textSize="20sp" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/addition"
                android:textSize="20sp" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/subtraction"
                android:textSize="20sp"
                app:rippleColor="@android:color/holo_orange_light" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="5">

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/signButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/sign"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dotButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:text="@string/enter"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>